src/components/Message/Message.scss
@import '../../const.scss';

.message-sent {
    .message-content {
        background-color: $primary;
        color: white;
    }
    .message-timestamp {
        text-align: right;
    }
}

.message-received {
    .message-content {
        background-color: #ddd;
        color: black;
    }
    .message-timestamp {
        text-align: left;
    }
}

.message-timestamp {
    color: #aaa;
    font-size: 0.9rem;
    font-style: italic;
}

.message-unreadable {
    text-align: center;
    font-style: italic;
}

